🚀 3단계 - 자동차 경주 (#5475)
* feat: StringTest

* feat: SetTest

* fix: string index exceptioin

* fix: modify string test

* step2: 문자열 덧셈 계산기

* fix: 계산기 피드백 적용

* fix: calculator feedback

* feat: racing car

* fix: 비지니스 로직 넘버는 상수로 표현

* fix: 자동차 경주 리팩토링